QA_Ipreo/src/objects/Sponsored_Asset__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sponsored Assets</relationshipLabel>
        <relationshipName>Sponsored_Assets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asset_Name_Marketo__c</fullName>
        <formula>Asset_Name__r.Name</formula>
        <label>Asset Name (Marketo)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Name__c</fullName>
        <label>Asset Name</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Sponsored Accounts</relationshipLabel>
        <relationshipName>Sponsored_Accounts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DM_Name__c</fullName>
        <label>DM Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shareholder_ID_project__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shareholder ID (project)</label>
        <type>Checkbox</type>
    </fields>
    <label>Sponsored Asset</label>
    <nameField>
        <displayFormat>A-{0}</displayFormat>
        <label>Sponsored Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sponsored Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>